fix(css): #124 Updated width on cmdbar overflow

--- a/htwoo-core/src/styles/01-atoms/buttons/_button-flyout.scss
+++ b/htwoo-core/src/styles/01-atoms/buttons/_button-flyout.scss
@@ -15,6 +15,9 @@
 
 	@include elevation.elevation(4);
 	z-index: 400;
+	.hoo-buttoncmd{
+		width: 100%;
+	}
 	.hoo-buttonaction{
 		width: 100%;
 		height: auto;
